# FEDGATE-Distributed-ML-systems-in-Finance

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  api.ts  decision.ts  styles.css  types.ts
data/samples/: borrowers.json
deploy/aws/: README.md  deploy.ps1
deploy/aws/terraform/: .gitignore  main.tf  outputs.tf  variables.tf
docs/architecture/: aws-reference.md
infra/postgres/init/: 01_init.sql
infra/postgres/migrations/: README.md
infra/redis/: README.md
ml/: __init__.py
ml/evaluation/: __init__.py  metrics.py
ml/features/: __init__.py  engineering.py
ml/federated/: __init__.py  simulation.py
ml/models/: __init__.py  lstm.py  training.py
scripts/: run_fl_round.py
services/: __init__.py
services/alert-service/: Dockerfile
services/alert-service/app/: __init__.py  main.py
services/api-gateway/: Dockerfile
services/api-gateway/app/: __init__.py  main.py
services/common/: __init__.py  config.py  models.py  schemas.py  storage.py
services/fl-orchestrator/: Dockerfile
services/fl-orchestrator/app/: __init__.py  main.py
services/risk-engine/: Dockerfile
services/risk-engine/app/: __init__.py  main.py
tests/: test_features.py  test_model_shapes.py
