[project]
name = "fedrisk-prototype"
version = "0.1.0"
description = "Federated LSTM financial risk monitoring prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "redis>=5.0.4",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "torch>=2.3.0",
  "flwr[simulation]>=1.9.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "pre-commit>=3.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
